src/lpc-lang/lpc-parser/LPCParser.js
"use strict";

function _typeof(obj) { "@babel/helpers - typeof"; if (typeof Symbol === "function" && typeof Symbol.iterator === "symbol") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === "function" && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }; } return _typeof(obj); }

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports["default"] = void 0;

var _antlr = _interopRequireDefault(require("antlr4"));

var _LPCListener = _interopRequireDefault(require("./LPCListener.js"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { "default": obj }; }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); return Constructor; }

function _inherits(subClass, superClass) { if (typeof superClass !== "function" && superClass !== null) { throw new TypeError("Super expression must either be null or a function"); } subClass.prototype = Object.create(superClass && superClass.prototype, { constructor: { value: subClass, writable: true, configurable: true } }); if (superClass) _setPrototypeOf(subClass, superClass); }

function _setPrototypeOf(o, p) { _setPrototypeOf = Object.setPrototypeOf || function _setPrototypeOf(o, p) { o.__proto__ = p; return o; }; return _setPrototypeOf(o, p); }

function _createSuper(Derived) { var hasNativeReflectConstruct = _isNativeReflectConstruct(); return function _createSuperInternal() { var Super = _getPrototypeOf(Derived), result; if (hasNativeReflectConstruct) { var NewTarget = _getPrototypeOf(this).constructor; result = Reflect.construct(Super, arguments, NewTarget); } else { result = Super.apply(this, arguments); } return _possibleConstructorReturn(this, result); }; }

function _possibleConstructorReturn(self, call) { if (call && (_typeof(call) === "object" || typeof call === "function")) { return call; } else if (call !== void 0) { throw new TypeError("Derived constructors may only return object or undefined"); } return _assertThisInitialized(self); }

function _assertThisInitialized(self) { if (self === void 0) { throw new ReferenceError("this hasn't been initialised - super() hasn't been called"); } return self; }

function _isNativeReflectConstruct() { if (typeof Reflect === "undefined" || !Reflect.construct) return false; if (Reflect.construct.sham) return false; if (typeof Proxy === "function") return true; try { Boolean.prototype.valueOf.call(Reflect.construct(Boolean, [], function () {})); return true; } catch (e) { return false; } }

function _getPrototypeOf(o) { _getPrototypeOf = Object.setPrototypeOf ? Object.getPrototypeOf : function _getPrototypeOf(o) { return o.__proto__ || Object.getPrototypeOf(o); }; return _getPrototypeOf(o); }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

var atn = new _antlr["default"].atn.ATNDeserializer().deserialize(serializedATN);
var decisionsToDFA = atn.decisionToState.map(function (ds, index) {
  return new _antlr["default"].dfa.DFA(ds, index);
});
var sharedContextCache = new _antlr["default"].PredictionContextCache();

var LPCParser = /*#__PURE__*/function (_antlr4$Parser) {
  _inherits(LPCParser, _antlr4$Parser);

  var _super = _createSuper(LPCParser);

  function LPCParser(input) {
    var _this;

    _classCallCheck(this, LPCParser);

    _this = _super.call(this, input);
    _this._interp = new _antlr["default"].atn.ParserATNSimulator(_assertThisInitialized(_this), atn, decisionsToDFA, sharedContextCache);
    _this.ruleNames = LPCParser.ruleNames;
    _this.literalNames = LPCParser.literalNames;
    _this.symbolicNames = LPCParser.symbolicNames;
    return _this;
  }

  _createClass(LPCParser, [{
    key: "atn",
    get: function get() {
      return atn;
    }
  }, {
    key: "sempred",
    value: function sempred(localctx, ruleIndex, predIndex) {
      switch (ruleIndex) {
        case 30:
          return this.expression_sempred(localctx, predIndex);

        default:
          throw "No predicate with index:" + ruleIndex;
      }
    }
  }, {
    key: "expression_sempred",
    value: function expression_sempred(localctx, predIndex) {
      switch (predIndex) {
        case 0:
          return this.precpred(this._ctx, 6);

        case 1:
          return this.precpred(this._ctx, 3);

        case 2:
          return this.precpred(this._ctx, 14);

        case 3:
          return this.precpred(this._ctx, 13);

        case 4:
          return this.precpred(this._ctx, 12);

        case 5:
          return this.precpred(this._ctx, 11);

        case 6:
          return this.precpred(this._ctx, 4);

        case 7:
          return this.precpred(this._ctx, 1);

        default:
          throw "No predicate with index:" + predIndex;
      }
    }
  }, {
    key: "lpcProgram",
    value: function lpcProgram() {
      var localctx = new LpcProgramContext(this, this._ctx, this.state);
      this.enterRule(localctx, 0, LPCParser.RULE_lpcProgram);
      var _la = 0; // Token type

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 169;

        this._errHandler.sync(this);

        _la = this._input.LA(1);

        if ((_la & ~0x1f) == 0 && (1 << _la & (1 << LPCParser.NoMask | 1 << LPCParser.Private | 1 << LPCParser.Protected | 1 << LPCParser.Public | 1 << LPCParser.Static | 1 << LPCParser.VarArgs | 1 << LPCParser.Float | 1 << LPCParser.Function | 1 << LPCParser.Int | 1 << LPCParser.Mapping | 1 << LPCParser.Mixed | 1 << LPCParser.Object | 1 << LPCParser.String | 1 << LPCParser.Void | 1 << LPCParser.Class | 1 << LPCParser.Inherit)) !== 0 || _la === LPCParser.Array || _la === LPCParser.SemiColon || _la === LPCParser.Multiply) {
          this.state = 168;
          this.programDeclarations();
        }

        this.state = 171;
        this.match(LPCParser.EOF);
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "programDeclarations",
    value: function programDeclarations() {
      var localctx = new ProgramDeclarationsContext(this, this._ctx, this.state);
      this.enterRule(localctx, 2, LPCParser.RULE_programDeclarations);
      var _la = 0; // Token type

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 174;

        this._errHandler.sync(this);

        _la = this._input.LA(1);

        do {
          this.state = 173;
          this.programDeclaration();
          this.state = 176;

          this._errHandler.sync(this);

          _la = this._input.LA(1);
        } while ((_la & ~0x1f) == 0 && (1 << _la & (1 << LPCParser.NoMask | 1 << LPCParser.Private | 1 << LPCParser.Protected | 1 << LPCParser.Public | 1 << LPCParser.Static | 1 << LPCParser.VarArgs | 1 << LPCParser.Float | 1 << LPCParser.Function | 1 << LPCParser.Int | 1 << LPCParser.Mapping | 1 << LPCParser.Mixed | 1 << LPCParser.Object | 1 << LPCParser.String | 1 << LPCParser.Void | 1 << LPCParser.Class | 1 << LPCParser.Inherit)) !== 0 || _la === LPCParser.Array || _la === LPCParser.SemiColon || _la === LPCParser.Multiply);
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "programDeclaration",
    value: function programDeclaration() {
      var localctx = new ProgramDeclarationContext(this, this._ctx, this.state);
      this.enterRule(localctx, 4, LPCParser.RULE_programDeclaration);

      try {
        this.state = 184;

        this._errHandler.sync(this);

        var la_ = this._interp.adaptivePredict(this._input, 2, this._ctx);

        switch (la_) {
          case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 178;
            this.programVariableDeclaration();
            break;

          case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 179;
            this.inheritanceDeclaration();
            break;

          case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 180;
            this.functionDeclaration();
            break;

          case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 181;
            this.functionDefinition();
            break;

          case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 182;
            this.classDefinition();
            break;

          case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 183;
            this.match(LPCParser.SemiColon);
            break;
        }
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "variableDeclaration",
    value: function variableDeclaration() {
      var localctx = new VariableDeclarationContext(this, this._ctx, this.state);
      this.enterRule(localctx, 6, LPCParser.RULE_variableDeclaration);

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 186;
        this.dataType();
        this.state = 187;
        this.variableList();
        this.state = 188;
        this.match(LPCParser.SemiColon);
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "programVariableDeclaration",
    value: function programVariableDeclaration() {
      var localctx = new ProgramVariableDeclarationContext(this, this._ctx, this.state);
      this.enterRule(localctx, 8, LPCParser.RULE_programVariableDeclaration);
      var _la = 0; // Token type

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 191;

        this._errHandler.sync(this);

        _la = this._input.LA(1);

        if ((_la & ~0x1f) == 0 && (1 << _la & (1 << LPCParser.Private | 1 << LPCParser.Protected | 1 << LPCParser.Public | 1 << LPCParser.Static)) !== 0) {
          this.state = 190;
          this.variableModifier();
        }

        this.state = 193;
        this.variableDeclaration();
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "functionDeclaration",
    value: function functionDeclaration() {
      var localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
      this.enterRule(localctx, 10, LPCParser.RULE_functionDeclaration);
      var _la = 0; // Token type

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 196;

        this._errHandler.sync(this);

        _la = this._input.LA(1);

        if ((_la & ~0x1f) == 0 && (1 << _la & (1 << LPCParser.NoMask | 1 << LPCParser.Private | 1 << LPCParser.Protected | 1 << LPCParser.Public | 1 << LPCParser.Static | 1 << LPCParser.VarArgs)) !== 0) {
          this.state = 195;
          this.functionModifier();
        }

        this.state = 198;
        this.functionReturnType();
        this.state = 199;
        this.identifier();
        this.state = 200;
        this.match(LPCParser.LeftParen);
        this.state = 203;

        this._errHandler.sync(this);

        var la_ = this._interp.adaptivePredict(this._input, 5, this._ctx);

        if (la_ === 1) {
          this.state = 201;
          this.argumentList();
        } else if (la_ === 2) {
          this.state = 202;
          this.dataTypeList();
        }

        this.state = 205;
        this.match(LPCParser.RightParen);
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "argumentList",
    value: function argumentList() {
      var localctx = new ArgumentListContext(this, this._ctx, this.state);
      this.enterRule(localctx, 12, LPCParser.RULE_argumentList);
      var _la = 0; // Token type

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 207;
        this.argument();
        this.state = 212;

        this._errHandler.sync(this);

        _la = this._input.LA(1);

        while (_la === LPCParser.Comma) {
          this.state = 208;
          this.match(LPCParser.Comma);
          this.state = 209;
          this.argument();
          this.state = 214;

          this._errHandler.sync(this);

          _la = this._input.LA(1);
        }

        this.state = 216;

        this._errHandler.sync(this);

        _la = this._input.LA(1);

        if (_la === LPCParser.Ellipsis) {
          this.state = 215;
          this.match(LPCParser.Ellipsis);
        }
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "argument",
    value: function argument() {
      var localctx = new ArgumentContext(this, this._ctx, this.state);
      this.enterRule(localctx, 14, LPCParser.RULE_argument);
      var _la = 0; // Token type

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 218;
        this.dataType();
        this.state = 220;

        this._errHandler.sync(this);

        _la = this._input.LA(1);

        if (_la === LPCParser.Array || _la === LPCParser.Multiply) {
          this.state = 219;
          this.array();
        }

        this.state = 222;
        this.identifier();
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "dataTypeList",
    value: function dataTypeList() {
      var localctx = new DataTypeListContext(this, this._ctx, this.state);
      this.enterRule(localctx, 16, LPCParser.RULE_dataTypeList);

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 224;
        this.dataType();
        this.state = 229;

        this._errHandler.sync(this);

        var _alt = this._interp.adaptivePredict(this._input, 9, this._ctx);

        while (_alt != 2 && _alt != _antlr["default"].atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            this.state = 225;
            this.match(LPCParser.Comma);
            this.state = 226;
            this.dataTypeList();
          }

          this.state = 231;

          this._errHandler.sync(this);

          _alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
        }
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "functionDefinition",
    value: function functionDefinition() {
      var localctx = new FunctionDefinitionContext(this, this._ctx, this.state);
      this.enterRule(localctx, 18, LPCParser.RULE_functionDefinition);

      try {
        this.enterOuterAlt(localctx, 1);
        this.state = 232;
        this.functionDeclaration();
        this.state = 233;
        this.block();
      } catch (re) {
        if (re instanceof _antlr["default"].error.RecognitionException) {
          localctx.exception = re;

          this._errHandler.reportError(this, re);

          this._errHandler.recover(this, re);
        } else {
          throw re;
        }
      } finally {
        this.exitRule();
      }

      return localctx;
    }
  }, {
    key: "accessLevelModifier",
    value: function accessLevelModifier() {
      var localctx = new AccessLevelModifierContext(this, this._ctx, this.state);
      this.enterRule(localctx, 20, LPCParser.RULE_accessLevelModifier);
      var _la = 0; // Token type
